[package]
name = "sqlx-tx-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1.10.0"
color-eyre = "0.6.2"
actix-web = "4.0.0-beta.5"
sqlx = { version = "0.6.2", features = [ "runtime-actix-native-tls" , "postgres" ] }
serde = "1.0.147"
kv-log-macro = "1.0.7"
log = { version = "0.4.17", features = ["kv_unstable_std"] }
backtrace = { version = "0.3.66", optional = true }
json_env_logger = { version = "0.1.1", features = ["iso-timestamps", "backtrace"] }
